Set codec_tag in dshow device, needed to distinguish between YUV and YVU.

Fixes ticket #3447.